--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/legacy-factories": "^1.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laraveles/spanish": "^1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
