--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,19 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "barryvdh/laravel-dompdf": "^0.9.0",
+        "dompdf/dompdf": "^1.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
+        "knplabs/knp-snappy": "^1.2",
         "laravel/framework": "^7.24",
         "laravel/legacy-factories": "^1.0",
         "laravel/tinker": "^2.0",
-        "laraveles/spanish": "^1.5"
+        "laraveles/spanish": "^1.5",
+        "nesbot/carbon": "^2.45"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
